--- a/src/Infrastructure/Infrastructure.fsproj
+++ b/src/Infrastructure/Infrastructure.fsproj
@@ -1,14 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <RootNamespace>Infrastructure</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="ClosedXML" Version="0.97.0" />
-      <PackageReference Include="Motsoft.Util" Version="1.6.0" />
       <PackageReference Include="Npgsql.FSharp" Version="5.4.0" />
     </ItemGroup>
 
