--- a/src/Infrastructure/Infrastructure.fsproj
+++ b/src/Infrastructure/Infrastructure.fsproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <RootNamespace>Infrastructure</RootNamespace>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <TailCalls>true</TailCalls>
     </PropertyGroup>
 
     <ItemGroup>
